--- a/instagram_ios/instagram_ios/Source/Main/Base.lproj/Main.storyboard
+++ b/instagram_ios/instagram_ios/Source/Main/Base.lproj/Main.storyboard
@@ -1163,20 +1163,18 @@
                                 <rect key="frame" x="0.0" y="227" width="428" height="60"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="위치 태그"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <backgroundConfiguration key="background" image="storyBtn2"/>
+                                </buttonConfiguration>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jBU-nU-cGy">
                                 <rect key="frame" x="0.0" y="167" width="428" height="60"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="사람 추가"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <backgroundConfiguration key="background" image="storyBtn1"/>
+                                </buttonConfiguration>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Oo4-Ky-oLB">
-                                <rect key="frame" x="50" y="474" width="328" height="328"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="Oo4-Ky-oLB" secondAttribute="height" multiplier="1:1" id="Z7H-5Y-K0p"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4Mr-CF-kdW"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -1184,13 +1182,10 @@
                             <constraint firstItem="jBU-nU-cGy" firstAttribute="height" secondItem="RoI-85-e5C" secondAttribute="height" multiplier="0.5" id="0fh-fj-zdl"/>
                             <constraint firstItem="jBU-nU-cGy" firstAttribute="leading" secondItem="4Mr-CF-kdW" secondAttribute="leading" id="6Mz-ql-QNM"/>
                             <constraint firstItem="jBU-nU-cGy" firstAttribute="top" secondItem="RoI-85-e5C" secondAttribute="bottom" id="7Fy-91-WpX"/>
-                            <constraint firstItem="4Mr-CF-kdW" firstAttribute="trailing" secondItem="Oo4-Ky-oLB" secondAttribute="trailing" constant="50" id="7N1-Uy-eJd"/>
-                            <constraint firstItem="Oo4-Ky-oLB" firstAttribute="leading" secondItem="4Mr-CF-kdW" secondAttribute="leading" constant="50" id="ECC-o9-Fxk"/>
                             <constraint firstItem="4Mr-CF-kdW" firstAttribute="trailing" secondItem="akA-Pq-dQ3" secondAttribute="trailing" id="JGV-v4-OmK"/>
                             <constraint firstItem="akA-Pq-dQ3" firstAttribute="leading" secondItem="4Mr-CF-kdW" secondAttribute="leading" id="Pwo-Aa-RAO"/>
                             <constraint firstItem="4Mr-CF-kdW" firstAttribute="trailing" secondItem="jBU-nU-cGy" secondAttribute="trailing" id="Sz7-9L-Sbq"/>
                             <constraint firstItem="4Mr-CF-kdW" firstAttribute="trailing" secondItem="RoI-85-e5C" secondAttribute="trailing" id="YFw-9H-waz"/>
-                            <constraint firstItem="4Mr-CF-kdW" firstAttribute="bottom" secondItem="Oo4-Ky-oLB" secondAttribute="bottom" constant="90" id="YO2-q0-6fj"/>
                             <constraint firstItem="akA-Pq-dQ3" firstAttribute="height" secondItem="jBU-nU-cGy" secondAttribute="height" id="cuq-39-Rik"/>
                             <constraint firstItem="akA-Pq-dQ3" firstAttribute="top" secondItem="jBU-nU-cGy" secondAttribute="bottom" id="eAj-BS-HWY"/>
                             <constraint firstItem="RoI-85-e5C" firstAttribute="top" secondItem="4Mr-CF-kdW" secondAttribute="top" id="tMJ-T6-2c8"/>
@@ -1198,12 +1193,10 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="appearedImage" destination="Oo4-Ky-oLB" id="idE-cu-yOX"/>
                         <outlet property="contentTextField" destination="atD-B6-iFR" id="PQK-Ih-dr7"/>
                         <outlet property="firstImage" destination="szK-QB-o31" id="CYa-k4-jVz"/>
                         <outlet property="locationBtn" destination="akA-Pq-dQ3" id="SWP-9L-ITd"/>
                         <outlet property="personBtn" destination="jBU-nU-cGy" id="c3I-kU-1fx"/>
-                        <outlet property="retrievedImages" destination="Oo4-Ky-oLB" id="p8M-tm-AES"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RM4-lz-XY8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -2363,6 +2356,8 @@
         <image name="meta_account" width="868" height="276"/>
         <image name="plus.app" catalog="system" width="128" height="114"/>
         <image name="save_uncheck" width="68" height="68"/>
+        <image name="storyBtn1" width="867" height="116"/>
+        <image name="storyBtn2" width="867" height="116"/>
         <image name="tabbar_home" width="40" height="47"/>
         <image name="tabbar_profile" width="40" height="39"/>
         <image name="tabbar_reels" width="50" height="49"/>
